# python-cookiecutter

./: .gitignore  LICENSE  MANIFEST.in  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
hooks/: post_gen_project.py
project-name/: README.md  mkdocs.yml  pyproject.toml
project-name/src/project_name/: __init__.py
project-name/tasks/: __init__.py  build.py  qa.py
project-name/tests/: test_version.py
tests/: test_template.py
{{ cookiecutter.project_slug }}/: .bumpversion.cfg  CODEOWNERS  LICENSE  Pipfile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tasks.py
{{ cookiecutter.project_slug }}/.github/: dependabot.yml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.module_name }}/: __init__.py
{{ cookiecutter.project_slug }}/tasks/: build.py  doc.py  qa.py
{{ cookiecutter.project_slug }}/tests/: test_version.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.module_name }}/: __init__.py
