[tool.poetry]
name = "python-cookiecutter"
version = "0.2.0.dev0"
description = "Project template for applications using Poetry."
authors = ["Jesse P. Johnson"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.2"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "<6.0.0"
pytest-cookies = "^0.5.1"
invoke = "^1.4.1"
proman-versioning = "^0.5.0-alpha.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.proman.versioning.files]]
filepath = "pyproject.toml"
pattern = "version = \"${version}\""

[tool.pytest.ini_options]
norecursedirs = "'{{ cookiecutter.project_slug }}'"
filterwarnings = [
    "ignore::DeprecationWarning:invoke.*:",
    "ignore::DeprecationWarning:_yaml.*:",
]
