[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cookiecutter"
version = "0.3.0.dev1"
description = "Project template for applications using Poetry."
readme = "README.rst"
license = {file = "LICENSE.md"}
keywords = ["state machine", "dsl"]
requires-python = ">=3.6.2"
authors = [{name = "Jesse P. Johnson", email = "jpj6652@gmail.com"}]
maintainers = [{name = "Jesse P. Johnson", email = "jpj6652@gmail.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
  "cookiecutter>=1.7.2",
  "jinja2_time"
]

[project.urls]
repository = "https://github.com/kuwv/python-fluidstate"

[project.optional-dependencies]
build = [
  "invoke>=1.4.1",
  "build",
  "proman-versioning>=0.5.0-alpha.2"
]
dev = [
  # Test
  "pytest<=7.0.0",
  "pytest-cookies>=0.6.1",
  "tox>=3.25.0",
  # SCA
  "mypy>=0.942",
  "bandit>=1.6.2",
  "pylint>=2.9.5"
  # Style
  "black==22.3.0",
  "isort>=5.10.1",
  "flake8>=3.8.3"
]
docs = [
  "docstr-coverage>=1.2.0",
  "pydocstyle[toml]>=6.1.1",
  "mkdocs>=1.2",
  "mkdocs-material>=7.2",
  "mkdocstrings>=0.15.2"
]

[tool.setuptools]
packages = []

[tool.pydocstyle]
ignore = [
  "D203",
  "D213"
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''

[[tool.proman.versioning.files]]
filepath = "pyproject.toml"
pattern = "version = \"${version}\""

[tool.pytest.ini_options]
norecursedirs = "'{{ cookiecutter.project_slug }}'"
filterwarnings = [
    "ignore::DeprecationWarning:invoke.*:",
    "ignore::DeprecationWarning:_yaml.*:"
]
