[metadata]
name = {{ cookiecutter.project_slug }}
version = 0.1.0
module = "{{ cookiecutter.module_name }}"
author = "{{ cookiecutter.author }}"
author_email = "{{ cookiecutter.email }}"
description = "{{ cookiecutter.project_description }}"
long_description = file: README.md
home-page = "https://github.com/{{ cookiecutter.account }}/{{ cookiecutter.project_slug }}"
classifiers =
{%- if cookiecutter.license == 'Apache-2.0' %}
    "License :: OSI Approved :: Apache Software License"
{%- elif cookiecutter.license == 'AGPL-3.0' %}
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
{%- elif cookiecutter.license == 'LGPL-3.0' %}
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
{%- elif cookiecutter.license == 'GPL-3.0' %}
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
{%- elif cookiecutter.license == 'BSD-3-Clause' %}
    "License :: OSI Approved :: BSD License"
{%- elif cookiecutter.license == 'MIT' %}
    "License :: OSI Approved :: MIT License"
{%- elif cookiecutter.license == 'MPL-2.0' %}
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
{% endif %}

[options]
# install_requires =
packages = {{ cookiecutter.module_name }}
package_dir=
    =src

# [options.entry_points]
# console_scripts =
#     <cli here> = {{ cookiecutter.module_name }}.__main__:main
